--- a/Presentation.tex
+++ b/Presentation.tex
@@ -55,7 +55,7 @@
 			\hfill - ISO 9241-11
 		\end{block}
 		\vspace{\baselineskip}
-		\begin{block}{API Usability}
+		\begin{block}{API-Usability}
 			\textit{[...] four main research questions, which characterize fundamental aspects of usability: understandability, abstraction level, reusability, and learnability.}	
 			\hfill - Piccioni, Furia \& Meyer~\cite{6681333}
 		\end{block}
