--- a/Presentation.tex
+++ b/Presentation.tex
@@ -129,6 +129,30 @@
 			\item Vier Quellcode-Ausschnitte pro Proband\\
 		\end{itemize}
 	\end{frame}
+	
+	\begin{frame}{Variablen}
+		\begin{columns}[T,onlytextwidth]
+	
+			\column{0.5\textwidth}
+			Unabhängige Variablen
+			\begin{itemize}
+				\item Art des Konstruktors:
+				\begin{itemize}
+					\item Default
+					\item Required
+				\end{itemize}
+				\item Art des Fehlers:
+				\begin{itemize}
+					\item Syntaktisch
+					\item Semantisch
+				\end{itemize}
+			\end{itemize}
+			\vspace{13pt}			
+		
+			\column{0.5\textwidth}
+			
+		\end{columns}	
+	\end{frame}
 
 	\begin{frame}{Variablen}
 		\begin{columns}[T,onlytextwidth]
@@ -232,6 +256,22 @@
 			\includegraphics[width=0.76\textwidth]{graphics/bar_result_sem.png}
 			\caption{\label{fig:bar_result_sem.png} Resultat der semantischen Aufgaben nach Art des Konstruktors}
 		\end{figure}
+	\end{frame}
+	
+	\begin{frame}{Validität}
+		\begin{columns}[T,onlytextwidth]
+	
+			\column{0.5\textwidth}
+			Intern
+			\begin{itemize}
+				\item Verständlichkeit der Konstruktoren abhängig vom Verständnis des allgemeinen Problems/Sachgebiets
+				\item Web-basiert (keine volle Kontrolle über das Verhalten der Teilnehmer)
+			\end{itemize}
+			\vspace{19.3pt}
+		
+			\column{0.5\textwidth}
+		\end{columns}	
+	
 	\end{frame}
 
 	\begin{frame}{Validität}
